# entt_dino

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
.github/workflows/: cmake.yml  cpplint.yml
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
comp/identifiers/: star.h
ent/: moon.h
ext/: CMakeLists.txt
res/sprites/: cactii.json  cloud.json  dino.json  floor.json  logo.json  moon.json  pterodactyl.json  retry.json  star.json
src/: main.cc
src/comp/: collider.h  despawn.h  gravity.h  rigid_body.h  spawner.h  sprite.h  state.h  tags.h  transform.h
src/comp/attributes/: spawner.h
src/comp/entities/: cloud.h  dino.h  floor.h
src/comp/entity/: despawn.h  states.h
src/comp/entity_states/: action.h  dead.h  despawn.h  running.h
src/comp/game/: dark.h  distance_run.h  highscore.h  score.h  speed.h  state.h
src/comp/game_states/: dark.h  distance_run.h  highscore.h  over.h  score.h  speed.h
src/comp/graphics/: animation.h  bounds.h  color.h  fps.h  sprite.h  transform.h  window.h  window_info.h
src/comp/identifiers/: cloud.h  dino.h  enemy.h  floor.h  moon.h  star.h
src/comp/physics/: collider.h  gravity.h  rigid_body.h  transform.h
src/core/: app.cc  app.h  base_scene.cc  base_scene.h  base_state.cc  base_state.h  base_system.cc  base_system.h  colors.h  entity_manager.cc  entity_manager.h  fonts.cc  fonts.h  fwd.h  game.cc  game.h  graphics.cc  graphics.h  hud.cc  hud.h  hud_elements.cc  hud_elements.h  random.cc  random.h  res_manager.cc  res_manager.h  scene_manager.cc  scene_manager.h  vec2d.h  window.cc  window.h
src/ctx/: context.h  contexts.cc  contexts.h  game.cc  game.h  game_states.h  general.cc  general.h  graphics.cc  graphics.h
src/ent/: background.cc  background.h  cactii.cc  cactii.h  cloud.cc  cloud.h  dino.cc  dino.h  entity_spawner.cc  entity_spawner.h  floor.cc  floor.h  moon.cc  moon.h  pterodactyl.cc  pterodactyl.h  spawner.cc  spawner.h  star.cc  star.h
src/ent/state/: window.cc  window.h
src/events/dino/: dead.h  ducking.h  jumping.h  running.h
src/events/entity/: despawn.h
src/events/game/: restart.h
src/scenes/: closing_credits.cc  closing_credits.h  dinosaur.cc  dinosaur.h  opening_credits.cc  opening_credits.h  running.cc  running.h
src/states/: dead.cc  dead.h  ducking.cc  ducking.h  jumping.cc  jumping.h  running.cc  running.h
src/sys/: background.cc  background.h  collide.cc  collide.h  despawn.cc  despawn.h  manage.cc  manage.h  move.cc  move.h  movement.cc  movement.h  offscreen.cc  offscreen.h  render.cc  render.h  score.cc  score.h  spawn.cc  spawn.h  state.cc  state.h  status.cc  status.h  sync.cc  sync.h
src/sys/states/: dead.cc  dead.h  running.cc  running.h
src/util/: random.cc  random.h  res.cc  res.h  str.cc  str.h
